[package]
name = "rustls-test"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "*"
webpki = "0.21.4"
webpki-roots = "0.21.0"

[patch.crates-io]
ring = {path = "ring"}
rustls = {path = "rustls/rustls"}
